package com.parkview.parkview.rest

/**
 * Class that implements a RestHandler using the Spring framework
 */
class SpringRestHandler: RestHandler {
    override fun handlePost(json: String) {
        TODO("Not yet implemented")
    }

    override fun handleGetHistory(json: String) {
        TODO("Not yet implemented")
    }

    override fun handleGetBenchmarkResults(json: String) {
        TODO("Not yet implemented")
    }
}