export enum PlotType {
  SCATTER,
  LINE,
  BAR
}
