export type Device = { name: string };
