@startuml backend

skinparam linetype ortho

package git {
  interface History {
   BranchForBenchmark getBranch(branch: String, benchmark: Benchmark)
  }

  interface RepositoryHandler {
    List<Commit> fetchGitHistory(branch: String)
  }

  class Commit {
    parents: List<Commit>
    sha: String
    message: String
    date: java.util.Date
    benchmarkResultsByDevice: Map<Device, BenchmarkResult>
    String getCommitMessage()
    String getSha()
    BenchmarkResult getBenchmarkResult(device: Device)
    Commit getPreviousCommit()
  }
  
  
  class BranchForBenchmark {
    name: String
    benchmark: Benchmark
    commits: List<Commit>
    Commit getCommit(sha: String)
    List<Commit> toList()
  }
    
  interface BenchmarkResult {
    Commit getCommit()
    Benchmark getBenchmark()
    Device getDevice()
    double getSummaryValue()
  }

  class Benchmark {
    name: String
  }

  class Device {
    name: String
  }

  class EmptyBenchmarkResult
  EmptyBenchmarkResult ..|> BenchmarkResult
  
  History --> BranchForBenchmark
  History --> RepositoryHandler
  
  BranchForBenchmark o-- Commit
  Commit "1" -- "*" BenchmarkResult
}


package rest {
  class GitApiHandler
  class SpringRestHandler
  
  interface RestHandler {
    void handlePost(json: String)
    void handleGetHistory(json: String)
    void handleGetBenchmarkResult(json: String)
  }
   
  SpringRestHandler ..|> RestHandler
}

package database {
  class PostgreSQLHandler
  
  interface DatabaseHandler {
    void updateCommits(commits: List<Commit>)
    void updateBenchmarkResults(results: List<BenchmarkResult>)
    BranchForBenchmark fetchBranch(branch: String, benchmark: Benchmark)
    BenchmarkResult fetchSingleBenchmarkResult(commit: Commit, device: Device, benchmark: Benchmark)
  }
  
  class HistoryDatabase

  class MissingBranchException
  class MissingBenchmarkResultException
  
  DatabaseHandler <- HistoryDatabase
  DatabaseHandler <|.. PostgreSQLHandler
  DatabaseHandler --> MissingBranchException
  DatabaseHandler --> MissingBenchmarkResultException

  class BenchmarkResultDatabase
  
  DatabaseHandler <- BenchmarkResultDatabase
  
  class LazyBenchmarkResult {
    component: BenchmarkResult
  }

  DatabaseHandler <-- LazyBenchmarkResult
}

package benchmark {
  abstract class MatrixBenchmarkResult {
    datapoints: List<MatrixDatapoint>
  }

  abstract class MatrixDatapoint {
    filename: String
    rows: int
    columns: int
    nonzeros: int
  }

  class BlasDatapoint {
    n: int
    r: int
    m: int
    k: int
    operations: List<Operation>
  }

  class Operation {
    name: String
    time: double
    flops: double
    bandwidth: double
    completed: bool
  }

  class ConversionDatapoint {
    conversions: List<Conversion>
  }


  class Conversion {
    name: String
    time: double
    completed: bool
  }

  class SpmvDatapoint {
    formats: List<Format>
    optimal: Format
  }

  class Format {
    name: String
    storage: int
    time: double
    maxRelativeNorm2: double
    completed: bool
  }

  class PreconditionerDatapoint {
    preconditioners: List<Preconditioner>
  }

  class Preconditioner {
    name: String
    generateComponents: List<Component>
    generateTime: double
    applyComponents: List<Component>
    applyTime: double
    completed: bool
  }

  class SolverDatapoint {
    solvers: List<Solver>
  }

  class Solver {
    name: String
    recurrentResiduals: [double]
    trueResiduals: [double]
    implicitResiduals: [double]
    iterationTimestamps: [double]
    rhsNorm: [double]
    residualNorm: [double]
    completed: bool
    generateComponents: List<Component>
    generateTotalTime: double
    applyComponents: List<Component>
    applyTotalTime: double
    applyIterations: int
  }

  class Component {
    name: String
    runtime: double
  }

  interface BenchmarkResultStorage {
    void storeBenchmarkResults(results: List<BenchmarkResult>)
  }

  class SolverBenchmarkResult {
  }

  class SpmvBenchmarkResult {
  }

  class ConversionBenchmarkResult {
  }

  class PreconditionerBenchmarkResult {
  }

  class BlasBenchmarkResult {
    datapoints: List<BlasDatapoint>
  }

  MatrixBenchmarkResult <|-- SolverBenchmarkResult
  MatrixBenchmarkResult <|--- SpmvBenchmarkResult
  MatrixBenchmarkResult <|---- ConversionBenchmarkResult
  MatrixBenchmarkResult <|----- PreconditionerBenchmarkResult

  MatrixDatapoint <|-- SolverDatapoint
  MatrixDatapoint <|--- SpmvDatapoint
  MatrixDatapoint <|---- ConversionDatapoint
  MatrixDatapoint <|----- PreconditionerDatapoint

  MatrixBenchmarkResult *- MatrixDatapoint
  BlasBenchmarkResult *- BlasDatapoint
  PreconditionerBenchmarkResult *- PreconditionerDatapoint
  SpmvBenchmarkResult *- SpmvDatapoint
  SolverBenchmarkResult *- SolverDatapoint
  ConversionBenchmarkResult *- ConversionDatapoint

  BlasDatapoint *- Operation
  PreconditionerDatapoint *- Preconditioner
  SpmvDatapoint *- Format
  SolverDatapoint *- Solver
  ConversionDatapoint *- Conversion

  Solver *-- Component
  Component --* Preconditioner
}

package processing {
  class DataProcessor {
    void storeBenchmarkResults(results: JSON)
    JSON transformBenchmarkResults(results: List<BenchmarkResult>, plotType: PlotType)
  }
  BenchmarkResultStorage <- DataProcessor

  DataProcessor --> SolverPlotTransform
  DataProcessor --> SpmvPlotTransform
  DataProcessor --> ConversionPlotTransform
  DataProcessor --> PreconditionerPlotTransform
  DataProcessor --> BlasPlotTransform

  interface SolverPlotTransform {
    JSON transform(benchmarkResults: List<SolverBenchmarkResult>)
  }

  interface SpmvPlotTransform {
    JSON transform(benchmarkResults: List<SpmvBenchmarkResult>)
  }

  interface ConversionPlotTransform {
    JSON transform(benchmarkResults: List<ConversionBenchmarkResult>)
  }

  interface PreconditionerPlotTransform {
    JSON transform(benchmarkResults: List<PreconditionerBenchmarkResult>)
  }

  interface BlasPlotTransform {
    JSON transform(benchmarkResults: List<BlasBenchmarkResult>)
  }

  class PlotType {
    name: String
  }
  DataProcessor -> PlotType

  SolverPlotTransform ---> InvalidPlotException
  SpmvPlotTransform ---> InvalidPlotException
  ConversionPlotTransform ---> InvalidPlotException
  PreconditionerPlotTransform ---> InvalidPlotException
  BlasPlotTransform ---> InvalidPlotException

  class ConversionSingleScatterPlotTransform
  class ConversionTwoScatterPlotTransform
  
  class SpmvSingleScatterPlotTransform
  class SpmvSinglePerformanceProfilePlotTransform 
  class SpmvTwoSpeedupPlotTransform

  class SolverSingleConvergenceGraphTransform
  class SolverMultiRuntimePlotTransform
  class SolverMultiAchievedBandwidthPlotTransform
  class SolverMultiIterationCountsPlotTransform
  class SolverMultiTimeToSolutionPlotTransform
  class SolverTwoSpeedupPlotTransform

  class PreconditionerSingleScatterPlotTransform
  class PreconditionerSingleComponentBreakdownPlotTransform
  class PreconditionerTwoScatterPlotTransform

  class BlasSingleScatterPlotTransform
  class BlasTwoScatterPlotTransform

  class InvalidPlotException

  ConversionPlotTransform <|.. ConversionSingleScatterPlotTransform
  ConversionPlotTransform <|.. ConversionTwoScatterPlotTransform

  SpmvPlotTransform <|.. SpmvSingleScatterPlotTransform
  SpmvPlotTransform <|.. SpmvSinglePerformanceProfilePlotTransform
  SpmvPlotTransform <|... SpmvTwoSpeedupPlotTransform


  SolverPlotTransform <|.. SolverSingleConvergenceGraphTransform
  SolverPlotTransform <|.. SolverMultiRuntimePlotTransform
  SolverPlotTransform <|... SolverMultiAchievedBandwidthPlotTransform
  SolverPlotTransform <|... SolverMultiIterationCountsPlotTransform
  SolverPlotTransform <|.... SolverMultiTimeToSolutionPlotTransform
  SolverPlotTransform <|.... SolverTwoSpeedupPlotTransform

  PreconditionerPlotTransform <|.. PreconditionerSingleScatterPlotTransform
  PreconditionerPlotTransform <|.. PreconditionerSingleComponentBreakdownPlotTransform
  PreconditionerPlotTransform <|... PreconditionerTwoScatterPlotTransform

  BlasPlotTransform <|.. BlasSingleScatterPlotTransform
  BlasPlotTransform <|.. BlasTwoScatterPlotTransform
}

History <- RestHandler
History <|. HistoryDatabase
BenchmarkResultStorage <|. BenchmarkResultDatabase
RepositoryHandler <|. GitApiHandler
DatabaseHandler -> Commit
DatabaseHandler -> BenchmarkResult
HistoryDatabase -> BranchForBenchmark
BenchmarkResult <|. LazyBenchmarkResult
BenchmarkResult <|.. MatrixBenchmarkResult
BenchmarkResult <|.... BlasBenchmarkResult
BenchmarkResult <- LazyBenchmarkResult
BenchmarkResult <- DataProcessor
DataProcessor <- RestHandler

DatabaseHandler -> Device
DatabaseHandler -> Benchmark

SolverPlotTransform --> SolverBenchmarkResult


SpmvPlotTransform --> SpmvBenchmarkResult


ConversionPlotTransform --> ConversionBenchmarkResult


PreconditionerPlotTransform --> PreconditionerBenchmarkResult


BlasPlotTransform --> BlasBenchmarkResult

@enduml
